applications/control/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monetization-control
  namespace: api-monetization-data
  labels:
    app.kubernetes.io/name: monetization-control
    app.kubernetes.io/part-of: api-monetization
spec:
  selector:
    app.kubernetes.io/name: monetization-control
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: internal
      port: 8081
      targetPort: internal
